# GraphRag

./: .gitignore  pyproject.toml
notebooks/: .deepeval_telemtry.txt  00_ingestion.ipynb  01_ingestion_preprocessing.ipynb  01_initial_llm.ipynb  02_text_processing.ipynb  03_graph_population.ipynb  04_retreivalqa.ipynb  df_results_eval_hybrid_1.parquet  df_results_eval_hybrid_2.parquet  df_results_eval_hybrid_3.parquet  graficos_5.ipynb  hybrid_1_resuslts_processed.parquet  hybrid_2_progress.json
pipeline_outcomes/: answers_plain_sequential.csv  df_results_1.csv  df_results_1.parquet  df_results_rerank.parquet  df_results_sistema5.parquet  hybrid_2_resuslts_processed.parquet  hybrid_4_progress.json  hybrid_4_resuslts_processed.parquet  hybrid_qa_progress.json  podcasts_entities_20241212.parquet  podcasts_relationships_20241213.parquet  quality_results.csv  quality_results_v2.csv  quality_results_v3.csv  quality_results_vrerank.csv  quality_results_vrerank2.csv  query_progress.json  results_sistem0.csv
src/grag/: create_graph.py  text_utils.py
tests/: test_qa_evaluation.py
