[tool.poetry]
name = "grag"
version = "0.1.0"
description = ""
authors = ["borja <borja.regueral@somniumrema.eu>"]
readme = "README.md"
packages = [{include = "grag", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastembed = "^0.4.1"
langchain = "^0.3.5"
langchain-ollama = "^0.2.0"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"
pandas = "^2.2.3"
pytest = "^8.3.3"
networkx = "^3.4.2"
neo4j = "^5.19.0"
sentence-transformers = "^3.2.1"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
langchain-huggingface = "^0.1.2"
protobuf = ">=3.19.0,<3.21.0"
tf-keras = "^2.18.0"
python-dotenv = "^1.0.1"
langchain-experimental = "^0.3.3"
langchain-openai = "^0.2.8"
openai = "^1.54.4"
hdbscan = "^0.8.39"
bertopic = "^0.16.4"
pyneo = "^0.2.0"
nltk = "^3.9.1"
spacy-llm = "^0.7.2"
spacy = "3.7.5"
ipykernel = "^6.29.5"
ftfy = "^6.3.1"
polars = "^1.14.0"
transformers = "^4.46.1"
langchain-community = "^0.3.7"
neo4j-graphrag = "^1.2.0"
seaborn = "^0.13.2"
graphdatascience = "^1.12"
rapidfuzz = "^3.10.1"
langchain-core = "^0.3.21"
knowledge-graph = "^0.0.30"
langchain-google-community = "^2.0.2"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.26.1"
nest-asyncio = "^1.6.0"
neo4j-driver = "^5.27.0"
langchain-anthropic = "^0.3.0"
pydantic = "2.7.4"
grpcio = ">=1.60.1,<2.0.0"
langchain-neo4j = "^0.1.1"
deepeval = "2.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
